test/tests/stages/8_loops/valid/while.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  while
  (
  identifier(a)
  <
  const int(5)
  )
  identifier(a)
  =
  identifier(a)
  +
  const int(2)
  ;
  return
  identifier(a)
  ;
  }
