test/tests/stages/8_loops/invalid_semantics/extra_credit/default_outside_switch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  {
  default
  :
  return
  const int(0)
  ;
  }
  }
